# 3D-rac-graf

./: .gitmodules  CMakeLists.txt  main.cpp
inc/: linear_algebra.h
inc/objects/: cuboid.h  cylinder.h  sphere.h
inc/rays/: ray.h
zadaca2/inc/lights/: point_light.h
zadaca2/inc/objects/: object.h
zadaca2/inc/rays/: shading.h  tracing.h
zadaca_5/: CMakeLists.txt  main.cpp  run.txt
zadaca_5/binary/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
zadaca_5/binary/binary/: cmake_install.cmake  cmake_uninstall.cmake
zadaca_5/binary/binary/src/: cmake_install.cmake  glfw3.lib  glfw3.pc
zadaca_5/include/: CircleRenderer.h  LineRenderer.h
zadaca_5/source/: CircleRenderer.cpp  LineRenderer.cpp  Shader.cpp
